<resources>
    <string name="Chat_Add_as_a_friend_to_chat">Add as a friend to chat</string>
    <string name="Chat_Agree">agree</string>
    <string name="Chat_Album_Permission_Get">Lack of reading system album permissions, please click
        "Settings" - "permissions" to authorize application permissions
    </string>
    <string name="Chat_All_Image">Images</string>
    <string name="Chat_All_Image_Video">Images and Videos</string>
    <string name="Chat_All_Video">Videos</string>
    <string name="Chat_Funding">[Funding]</string>
    <string name="Chat_Group_chat">Group chats</string>
    <string name="Chat_Group_has_been_disbanded">%s Group has been disbanded</string>
    <string name="Chat_Have_agreed">Accepted</string>
    <string name="Chat_Have_refused">Refused</string>
    <string name="Chat_Loc">location</string>
    <string name="Chat_Member_Max">%1$d/%2$d members</string>
    <string name="Chat_Message_Black_Friend_Notice">The message has been issued but is rejected by
        the other party
    </string>
    <string name="Chat_Message_Friend_Cookie_Expired_Notice">Friends are not logged in for a long time, login time has expired</string>
    <string name="Chat_Msg_Undefine">Message is undefined</string>
    <string name="Chat_No_Pictures">No picture</string>
    <string name="Chat_Notice_New_Message">[You got a new message]</string>
    <string name="Chat_Photo_libary">Album</string>
    <string name="Chat_Preview_Num">preview(%1$d)</string>
    <string name="Chat_Recommend_business_CARDS_to_friends">Recommend business card to friend
    </string>
    <string name="Chat_Recommend_your_business_card">Recommend your business card</string>
    <string name="Chat_Select">Select</string>
    <string name="Chat_Select_Count">select(%1$d)</string>
    <string name="Chat_Select_Count_Max">select(%1$d/%2$d)</string>
    <string name="Chat_Send_Mulphoto">send%1$dphoto</string>
    <string name="Chat_Sharelink">[share link]</string>
    <string name="Chat_Source_QR">Share of the group of qr code</string>
    <string name="Chat_Transfer_Detail">Transfer Detail</string>
    <string name="Chat_one_device_can_only_grab_a_luckypackage">one device can only grab a
        luckypackage
    </string>
    <string name="Chat_system_luckypackage_have_been_frozen">system luckypackage have been frozen
    </string>
    <string name="Chat_the_day_before_yesterday_time">Chat the day before yesterday time %s</string>
    <string name="Chat_Address_already_exists">Address already exists</string>
    <string name="Chat_The_main_content">The main content</string>
    <string name="Chat_Time">Time</string>
    <string name="Chat_Album">Photos</string>
    <string name="Chat_Organizational_structure">Organizational structure</string>
    <string name="Chat_Contact_details">Contact details</string>
    <string name="Chat_Audio">[Audio]</string>
    <string name="Chat_Best_luck">Best luck</string>
    <string name="Chat_Bitcoin_has_been_return_to_your_wallet">Bitcoin has been return to your
        wallet
    </string>
    <string name="Chat_Chats">Chats</string>
    <string name="Chat_Choose_Members">Choose Members</string>
    <string name="Chat_Choose_contact">Choose contact</string>
    <string name="Chat_Complete">Complete</string>
    <string name="Chat_Create_a_new_chat">Create a new chat</string>
    <string name="Chat_Crowd_founding_in_progress">Crowd-founding in progress</string>
    <string name="Chat_Crowd_funding">Crowd-funding</string>
    <string name="Chat_Crowd_funding_by_who">By %s</string>
    <string name="Chat_Crowdfoundind_History">History</string>
    <string name="Chat_Crowdfunding">Crowdfunding</string>
    <string name="Chat_Crowfunding">Create</string>
    <string name="Chat_Draft">[Draft]</string>
    <string name="Chat_Enter_BTC">%1$s\n%2$s BTC</string>
    <string name="Chat_Expired">Expired %1$d/%2$d</string>
    <string name="Chat_Expression">[Expression]</string>
    <string name="Chat_Failed_to_get_redpact">Failed to get redpact</string>
    <string name="Chat_Find_me_from_the_recommendation">Find me from the recommendation</string>
    <string name="Chat_Founded_complete">Founded complete</string>
    <string name="Chat_Group_Members">Members(%d)</string>
    <string name="Chat_Group_Namecard">[Group Namecard]</string>
    <string name="Chat_Group_certification">[Group certification]</string>
    <string name="Chat_History">History</string>
    <string name="Chat_Loading">Loading</string>
    <string name="Chat_Location">[Location]</string>
    <string name="Chat_Lucky_packet_Overtime">Lucky packet Overtime!</string>
    <string name="Chat_Lucky_packet_transfering_to_your_wallet">Lucky packet transfering to your
        wallet
    </string>
    <string name="Chat_Message_retweet">Message retweet</string>
    <string name="Chat_Mute_Notification">Mute Notification</string>
    <string name="Chat_Name_Card">Name Card</string>
    <string name="Chat_Network_connection_failed_please_check_network">Network connection failed,
        please check network
    </string>
    <string name="Chat_New_application">New application</string>
    <string name="Chat_New_message_notification">New message notification</string>
    <string name="Chat_Not_Group_Master">You are not the group adminer</string>
    <string name="Chat_Not_connected">Not connected</string>
    <string name="Chat_Photo">Photo</string>
    <string name="Chat_Picture">[Picture]</string>
    <string name="Chat_Preview">Preview</string>
    <string name="Chat_Read_Burn">Read &amp; Burn</string>
    <string name="Chat_Recent_chat">Recent chat</string>
    <string name="Chat_Red_packet">[Lucky packet]</string>
    <string name="Chat_Refreshing_Secret_Key">Refreshing Secret Key...</string>
    <string name="Chat_Release_to_cancel">Release to cancel</string>
    <string name="Chat_Secret_Key_Refreshed">Secret Key Refreshed</string>
    <string name="Chat_Send_a_Luck_Packet_Click_to_view">Send Lucky Packet\nClick to view</string>
    <string name="Chat_Send_a_namecard">Send a namecard</string>
    <string name="Chat_Send_vioce">Send vioce</string>
    <string name="Chat_Share_contact">Share the Contact Card</string>
    <string name="Chat_Share_contact_to">Share %1$s to %2$s</string>
    <string name="Chat_Sight">Sight</string>
    <string name="Chat_Slide_left_to_cancel">Swipe to the left to cancel</string>
    <string name="Chat_Snapchat">[Snapchat]</string>
    <string name="Chat_Someone_note_me">[Someone @ me]</string>
    <string name="Chat_Sticky_on_Top_chat">Sticky on Top chat</string>
    <string name="Chat_Tips">[Tips message]</string>
    <string name="Chat_Transfer">[Transfer]</string>
    <string name="Chat_Transfer_to_other_BTC">Transfer to other \n%s BTC</string>
    <string name="Chat_Transfer_to_you_BTC">Transfer to you \n%s BTC</string>
    <string name="Chat_Unpaid">Unpaid</string>
    <string name="Chat_Update_Database">Update Database</string>
    <string name="Chat_Updating_Database">Updating Database</string>
    <string name="Chat_User_already_in_group">User already in group</string>
    <string name="Chat_VerifyCode_has_expired">VerifyCode has expired</string>
    <string name="Chat_Video">[Video]</string>
    <string name="Chat_Visting_card">[Visting card]</string>
    <string name="Chat_Waitting_for_open">Waitting for open</string>
    <string name="Chat_Yesterday">Yesterday</string>
    <string name="Chat_You">You</string>
    <string name="Chat_You_are_start_encrypt_chat_Messages_encrypted">Starting encrypted
        chat\n\nMessages P2P encrypted with private key\nAny 3th party can’t get contents\nServer
        doesn’t retain any history
    </string>
    <string name="Chat_Your_Connect_ID_will_no_longer_be_linked_with_mobile_number">Your Connect ID
        will no longer be linked with mobile number as this number has been linked to %s
    </string>
    <string name="Chat_Your_account_is_not_bound_to_the_phone">Your account is haven\'t bind a
        phone,Please try again after binded
    </string>
    <string name="Chat_disable_the_self_descruct">%s disabled the self-destruct</string>
    <string name="Chat_et_self_destruct_timer">Set self-destruct timer</string>
    <string name="Chat_founded">%1$d/%2$d founded</string>
    <string name="Chat_opened_Lucky_Packet_of">%1$s’ve opened Lucky Packet of %2$s</string>
    <string name="Chat_paid_the_bill_to">%1$s paid the bill to %2$s</string>
    <string name="Chat_paid_the_crowd_founding_to">%1$s paid the crowd-founding to %2$s</string>
    <string name="Chat_set_the_self_destruct_timer_to">%1$s set the self-destruct timer to %2$s
    </string>
    <string name="Common_Cancel">Cancel</string>
    <string name="Common_Management">Manage</string>
    <string name="Common_The_search_application">Search application</string>
    <string name="Common_Completed">Completed</string>
    <string name="Common_Download_App">Downloading%s</string>
    <string name="Common_In">In \'%s</string>
    <string name="Common_Loading">Loading ...</string>
    <string name="Common_OK">OK</string>
    <string name="ErrorCode_Request_Error">Request Error</string>
    <string name="Link_Friend">Friend</string>
    <string name="Link_Market_value">Market value</string>
    <string name="Link_From">from</string>
    <string name="Link_Open_in_Browser">Open in a browser</string>
    <string name="Link_Unable_to_access_permissom">No access granted. Please enable the relative
        access in the application access management.
    </string>
    <string name="Link_Unable_to_access_permissom_storage">No access to memory, please authorize in
        the application access management
    </string>
    <string name="Link_Unable_to_get_the_sms_data">No access to the sms, please enable the sms in
        the application access management on your phone
    </string>
    <string name="Link_contact_loading_failed_check_the_contact_pression">contact loading failed,
        please check the contact access in the settings of your phone
    </string>
    <string name="Link_Accept">Accept</string>
    <string name="Link_Contains">Contains:%s</string>
    <string name="Link_Relevant_record">%s relevant record</string>
    <string name="Link_Add">Add</string>
    <string name="Link_Add_Failed">Add Failed</string>
    <string name="Link_Add_focus">Set to pay special attention to</string>
    <string name="Link_Cancle_focus">Cancel the special attention</string>
    <string name="Link_Add_Successful">Add Successful</string>
    <string name="Link_Add_as_a_friend">Send friend verification</string>
    <string name="Link_Add_to_Contacts">Add to Contacts</string>
    <string name="Link_Added">Added</string>
    <string name="Link_Not_logged_in">Not logged in</string>
    <string name="Link_An_error_occurred_change_nickname">An error occurred change nickname</string>
    <string name="Link_Black_List">Block List</string>
    <string name="Link_Block">Block</string>
    <string name="Link_Clear_All_Chat_History">Clear All Chat History</string>
    <string name="Link_Clear_Chat_History">Clear Chat History</string>
    <string name="Link_Contacts">Contacts</string>
    <string name="Link_My_group">My group</string>
    <string name="Link_Chat_record">Chat record</string>
    <string name="Link_Delete">Delete</string>
    <string name="Link_Search">Search</string>
    <string name="Link_Dialogue">Dialogues</string>
    <string name="Link_Workbench">Workbench</string>
    <string name="Set_Setting">Setting</string>
    <string name="app_name">iWork</string>
    <string name="Please_Input_Login_username">Company username</string>
    <string name="Please_Input_Login_password">password</string>
    <string name="Login_Immediately">Landing immediately</string>
    <string name="Beijing_BitMain">Beijing BitMain Technology Co., Ltd.</string>
    <string name="Work_Search">Search</string>
    <string name="Login_Forget_Password">Forget password</string>
</resources>