<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_userlogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_100"
            android:background="@drawable/shape_login_grident"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/Login_Welcome_to_iWork"
                android:textColor="@color/color_3A7CD2"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_25">
                <EditText
                    android:id="@+id/name_et"
                    style="@style/EditStyle.16"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_30"
                    android:layout_toLeftOf="@+id/name_clear_image"
                    android:hint="@string/Please_Input_Login_username"
                    android:singleLine="true"
                    android:textSize="@dimen/sp_14" />
                <ImageView
                    android:id="@+id/name_clear_image"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:padding="@dimen/dp_5"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"
                    android:src="@mipmap/edit_fork"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_3"
                android:background="@color/color_EDEDED"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_20">
                <EditText
                    android:id="@id/password_et"
                    style="@style/EditStyle.16"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_30"
                    android:layout_toLeftOf="@+id/password_clear_image"
                    android:hint="@string/Please_Input_Login_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/sp_14" />
                <ImageView
                    android:id="@+id/password_clear_image"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:padding="@dimen/dp_5"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"
                    android:src="@mipmap/edit_fork"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_3"
                android:background="@color/color_EDEDED"/>
            <TextView
                android:id="@id/text_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_19"
                android:layout_marginBottom="@dimen/dp_25"
                android:text="@string/Login_Forget_Password"
                android:textColor="@color/color_90AFE7"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>


        <RelativeLayout
            android:id="@id/relative_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/select_btn_short_stroke"
            android:gravity="center">
            <View
                android:id="@id/image_loading"
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_2"
                android:background="@mipmap/icon_loading"
                android:visibility="gone" />
            <TextView
                android:id="@id/next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_toRightOf="@+id/image_loading"
                android:enabled="false"
                android:text="@string/Login_Immediately"
                android:textColor="@color/color_ffffff" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_30"
        android:gravity="center"
        android:orientation="horizontal">
        <View
            style="@style/BaseViewLine.d1d5da"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:text="@string/Beijing_BitMain"
            android:textColor="@color/color_828282"
            android:textSize="@dimen/sp_12" />
        <View
            style="@style/BaseViewLine.d1d5da"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>