<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F6F6F6"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@color/color_457DE3">
        <RelativeLayout
            android:id="@+id/left_rela"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_28"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/selector_top_title_btn">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:contentDescription="@string/app_name"
                android:layout_centerInParent="true"
                android:src="@mipmap/back_white"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_28"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toLeftOf="@+id/search_rela"
            android:layout_toRightOf="@+id/left_rela"
            android:background="@drawable/shape_search">
            <ImageView
                android:id="@id/left_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/department_search" />
            <EditText
                android:id="@+id/search_edit"
                style="@style/EditStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/del_tv"
                android:layout_toRightOf="@+id/left_img"
                android:gravity="center_vertical"
                android:hint="@string/Link_Search"
                android:singleLine="true"
                android:textColor="@color/color_161A21"
                android:textColorHint="@color/color_b3b5bc"
                android:textSize="@dimen/sp_14" />
            <ImageView
                android:id="@+id/del_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/input_del"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/search_rela"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_28"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/selector_top_title_btn">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Work_Search"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/sp_14"
                android:singleLine="true"
                android:paddingLeft="@dimen/dp_3"
                android:paddingRight="@dimen/dp_3"
                />
        </RelativeLayout>


    </RelativeLayout>

    <FrameLayout
        android:id="@+id/content_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>