<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/color_FFFFFF"
                android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <!-- message -->
        <RelativeLayout
            android:id="@+id/msg_rela"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/msg_content_rela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                    android:id="@id/msg"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:scaleType="fitXY"
                    android:src="@drawable/selector_message"/>
                <TextView
                    android:id="@+id/msg_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_10"
                    android:textColor="@drawable/home_selector_text_color"
                    android:text="@string/Link_Dialogue"/>
            </LinearLayout>
            <connect.widget.badge.BadgeView
                android:id="@id/badgetv"
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp__10"
                android:layout_marginTop="@dimen/dp_2"
                android:layout_toRightOf="@id/msg_content_rela"
                android:textColor="@color/color_FFFFFF"
                android:textSize="@dimen/sp_6"
                android:visibility="gone"/>
        </RelativeLayout>

        <!-- contact -->
        <RelativeLayout
            android:id="@+id/contact_rela"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/contact_content_rela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                    android:id="@id/contact"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:scaleType="fitXY"
                    android:src="@drawable/selector_contact"/>
                <TextView
                    android:id="@+id/contact_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_10"
                    android:textColor="@drawable/home_selector_text_color"
                    android:layout_marginTop="3dp"
                    android:text="@string/Link_The_contact"/>
            </LinearLayout>
            <connect.widget.badge.BadgeView
                android:id="@id/contact_badgetv"
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_2"
                android:layout_marginLeft="@dimen/dp__10"
                android:layout_toRightOf="@id/contact_content_rela"
                android:textColor="@color/color_FFFFFF"
                android:textSize="@dimen/sp_6"
                android:visibility="gone"/>
        </RelativeLayout>

        <!-- workbench -->
        <RelativeLayout
            android:id="@+id/workbench_rela"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/workbench_content_rela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                    android:id="@+id/workbench"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:scaleType="fitXY"
                    android:src="@drawable/selector_workbench"/>
                <TextView
                    android:id="@+id/workbench_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_10"
                    android:textColor="@drawable/home_selector_text_color"
                    android:layout_marginTop="3dp"
                    android:text="@string/Link_Workbench"/>
            </LinearLayout>
        </RelativeLayout>

        <!-- 设置 -->
        <RelativeLayout
            android:id="@+id/set_rela"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                    android:id="@+id/set"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:scaleType="fitXY"
                    android:src="@drawable/selector_setting"/>
                <TextView
                    android:id="@+id/set_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_10"
                    android:textColor="@drawable/home_selector_text_color"
                    android:layout_marginTop="3dp"
                    android:text="@string/Set_Setting"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_EEEEEE"/>

</RelativeLayout>